fix : backend multichoice alignment

--- a/sass/blocks/default/backend.scss
+++ b/sass/blocks/default/backend.scss
@@ -416,6 +416,7 @@
 					border: var( --srfm-border ) solid var( --srfm-border-color );
 					border-radius: var( --srfm-border-radius );
 					width: auto;
+					height: 100%;
 
 					.srfm-multi-choice-icon {
 						position: relative;
